Align images of opportunities correctly

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,8 +287,26 @@ h1, h2 {
 
 
 
+/* Beginning of Opportunities styling */
 
+#hiring {
+    height: 40vh;
+    display: flex;
+    flex-direction: row;
+    
+}
 
+.hiring-img {
+    flex-grow: 1;
+    height: 100%;
+    overflow: hidden;
+}
+
+.hiring-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
 
 
 
